config-root/namespaces/jx-staging/project-7/project-7-project-7-deploy.yaml
# Source: project-7/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-7-project-7
  labels:
    draft: draft-app
    chart: "project-7-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: project-7-project-7
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: project-7-project-7
    spec:
      serviceAccountName: project-7-project-7
      containers:
        - name: project-7
          image: "292032292180.dkr.ecr.us-east-1.amazonaws.com/292032292180/project-7:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
