config-root/namespaces/jx-staging/project-7/project-7-svc.yaml
# Source: project-7/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-7
  labels:
    chart: "project-7-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: project-7-project-7
